hphp/hack/test/typecheck/instanceof/instanceof_generic_bad.php
<?hh // partial

class T {
  public function f<T>($a): bool {
    return $a instanceof T;
  }
}
